[package]
name = "rust_math"
version = "0.3.7"
edition = "2021"
description = "Math library written in Rust"
documentation = "https://github.com/bktech2021/rust_math"
readme = "README.md"
repository = "https://github.com/bktech2021/rust_math"
license = "MIT"
keywords = ["math", "list", "trigonometry"]
categories = ["algorithms", "no-std"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
